# elevenlabs-cli

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SKILLS.md  justfile  lefthook.yml
.github/: dependabot.yml
.github/workflows/: auto-close-conflicted-prs.yml  ci.yml  dependabot-auto-merge.yml  release.yml  wasm.yml
.omd/autopilot/: plan.md  spec.md
.omd/state/: subagent-tracking.json
.serena/: project.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: elevenlabs-cli.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/nix/: default.nix
src/: audio.rs  config.rs  errors.rs  main.rs  mcp_handlers.rs  utils.rs
src/cli/: agent.rs  args.rs  audio.rs  config.rs  conversation.rs  design.rs  dialogue.rs  dubbing.rs  history.rs  knowledge.rs  library.rs  mod.rs  models.rs  music.rs  native.rs  phone.rs  projects.rs  pronunciation.rs  rag.rs  samples.rs  stt.rs  tools.rs  tts.rs  update.rs  usage.rs  user.rs  voice.rs  webhook.rs  workspace.rs
src/client/: api.rs  mod.rs  retry.rs
src/commands/: agent.rs  audio_native.rs  config.rs  conversation.rs  dialogue.rs  dubbing.rs  history.rs  isolation.rs  knowledge.rs  mod.rs  models.rs  music.rs  phone.rs  projects.rs  pronunciation.rs  rag.rs  realtime_tts.rs  samples.rs  sfx.rs  stt.rs  tools.rs  tts.rs  tts_stream.rs  tts_timestamps.rs  update.rs  usage.rs  user.rs  voice.rs  voice_changer.rs  voice_design.rs  voice_library.rs  webhook.rs  workspace.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/output/: mod.rs  table.rs  text.rs
src/validation/: mod.rs  voice_settings.rs
tests/: cli_basic.rs  comprehensive.rs
